--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--<header id="header">
             <div class="container-fluid">
                 <div class="navbar">
-                    <a href="https://www.valjevskagimnazija.edu.rs/" id="logo" title="Elegance by TemplateMo">
+                    <a href="https://www.valjevskagimnazija.edu.rs/" id="logo" title="Elegance by TemplateMo" target="_blank">
                         Valjevska Gimnazija
                     </a>
 					
